--- a/platformio.ini
+++ b/platformio.ini
@@ -7,3 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:stm32h7]
+platform = ststm32
+board = nucleo_h753zi
+framework = arduino
