Example code for first couple states

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = ststm32
 board = nucleo_h753zi
 framework = arduino
-lib_deps = finani/ICM42688@^1.1.0
+lib_deps =
+	finani/ICM42688@^1.1.0
+	Wire
+	SPI
