this seems to fix my lsp being really mad (now it's only a little mad)

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = ststm32
 board = nucleo_h753zi
 framework = arduino
+build_flags = -std=c++14
 lib_deps =
 	finani/ICM42688@^1.1.0
 	Wire
