--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,9 @@ board = nucleo_h753zi
 framework = arduino
 build_flags = -std=c++14
 lib_deps =
+	adafruit/Adafruit LPS2X@^2.0.6
+	adafruit/Adafruit BusIO@^1.17.0
+	adafruit/Adafruit Unified Sensor@^1.1.15
 	finani/ICM42688@^1.1.0
 	Wire
 	SPI
