--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	adafruit/Adafruit LPS2X@^2.0.6
 	adafruit/Adafruit BusIO@^1.17.0
 	adafruit/Adafruit Unified Sensor@^1.1.15
-	finani/ICM42688@^1.1.0
+ 	stm32duino/STM32duino ASM330LHH@^2.0.1
+	adafruit/Adafruit ICM20X@^2.0.7
 	Wire
 	SPI
