--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,6 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.15
  	stm32duino/STM32duino ASM330LHH@^2.0.1
 	adafruit/Adafruit ICM20X@^2.0.7
+	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	Wire
 	SPI
