first attempt to make board config

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,18 @@
 
 [env:stm32h7]
 platform = ststm32
-board = nucleo_h753zi
+board = mars
+board_build.variants_dir = variants
 framework = arduino
-build_flags = -std=c++14
+build_flags =
+	-std=c++14
+	-I variants/MARS
+    -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -DUSBCON
+    -DUSBD_VID=0
+    -DUSBD_PID=0
+    -Wa,-mfloat-abi=hard
+    -Wa,-mfpu=fpv4-sp-d16
 lib_deps =
 	adafruit/Adafruit LPS2X@^2.0.6
 	adafruit/Adafruit BusIO@^1.17.0
@@ -22,3 +31,4 @@ lib_deps =
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	Wire
 	SPI
+debug_init_break = break setup
