--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,5 @@
 ; PlatformIO Project Configuration File
+
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -20,6 +21,8 @@ build_flags =
     -DUSBCON
     -DUSBD_VID=0
     -DUSBD_PID=0
+	# -DHSE_VALUE=25000000UL
+	-DHSE_BYPASS_NOT_USED
     -Wa,-mfloat-abi=hard
     -Wa,-mfpu=fpv4-sp-d16
 lib_deps =
@@ -31,4 +34,3 @@ lib_deps =
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	Wire
 	SPI
-debug_init_break = break setup
