--- a/platformio.ini
+++ b/platformio.ini
@@ -9,22 +9,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:stm32h7]
+[env]
 platform = ststm32
-board = mars
-board_build.variants_dir = variants
 framework = arduino
-build_flags =
-	-std=c++14
-	-I variants/MARS
-    -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
-    -DUSBCON
-    -DUSBD_VID=0
-    -DUSBD_PID=0
-	# -DHSE_VALUE=25000000UL
-	-DHSE_BYPASS_NOT_USED
-    -Wa,-mfloat-abi=hard
-    -Wa,-mfpu=fpv4-sp-d16
+build_flags = -std=c++14
 lib_deps =
 	adafruit/Adafruit LPS2X@^2.0.6
 	adafruit/Adafruit BusIO@^1.17.0
@@ -34,3 +22,20 @@ lib_deps =
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	Wire
 	SPI
+
+[env:mars]
+board = mars
+board_build.variants_dir = variants
+build_flags =
+	-I variants/MARS
+    -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -DUSBCON
+    -DUSBD_VID=0
+    -DUSBD_PID=0
+	# -DHSE_VALUE=25000000UL
+	-DHSE_BYPASS_NOT_USED
+    -Wa,-mfloat-abi=hard
+    -Wa,-mfpu=fpv4-sp-d16
+
+[env:nucleo]
+board = nucleo_h753zi
