--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
  	stm32duino/STM32duino ASM330LHH@^2.0.1
 	adafruit/Adafruit ICM20X@^2.0.7
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
+	greiman/SdFat
 	Wire
 	SPI
 
