--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@
 [env]
 platform = ststm32
 framework = arduino
-build_flags = -std=c++14
 lib_deps =
 	adafruit/Adafruit LPS2X@^2.0.6
 	adafruit/Adafruit BusIO@^1.17.0
@@ -28,6 +27,7 @@ lib_deps =
 board = mars
 board_build.variants_dir = variants
 build_flags =
+	-D MARS
 	-I variants/MARS
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
     -DUSBCON
@@ -40,3 +40,17 @@ build_flags =
 
 [env:nucleo]
 board = nucleo_h753zi
+build_flags = -D NUCLEO
+
+[env:polaris]
+board = teensymm
+platform = teensy
+build_flags = -D POLARIS -D ENABLE_DEDICATED_SPI=0
+lib_deps =
+	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
+	sparkfun/SparkFun MMC5983MA Magnetometer Arduino Library@^1.1.4
+	finani/ICM42688@^1.1.0
+
+[env:polaris-linux]
+extends = env:polaris
+upload_protocol = teensy-cli
