--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,11 @@ lib_deps =
 	adafruit/Adafruit ICM20X@^2.0.7
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	greiman/SdFat
+	nanopb/Nanopb@^0.4.91
 	Wire
 	SPI
+custom_nanopb_protos =
+	+<proto/RocketTelemetryPacket.proto>
 
 [env:mars]
 board = mars
@@ -50,6 +53,7 @@ lib_deps =
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	sparkfun/SparkFun MMC5983MA Magnetometer Arduino Library@^1.1.4
 	finani/ICM42688@^1.1.0
+	nanopb/Nanopb@^0.4.91
 
 [env:polaris-linux]
 extends = env:polaris
