move protobuf code to be handled in XbeeProSX class

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ lib_deps =
 	Wire
 	SPI
 custom_nanopb_protos =
-	+<proto/RocketTelemetryPacket.proto>
+	+<proto/**/*.proto>
 
 [env:mars]
 board = mars
@@ -38,8 +38,10 @@ build_flags =
     -DUSBD_PID=0
 	# -DHSE_VALUE=25000000UL
 	-DHSE_BYPASS_NOT_USED
+	-DLSE_BYPASS_NOT_USED
     -Wa,-mfloat-abi=hard
     -Wa,-mfpu=fpv4-sp-d16
+upload_protocol = dfu
 
 [env:nucleo]
 board = nucleo_h753zi
