both spi busses working together + a bit more protobuf code

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	nanopb/Nanopb@^0.4.91
 	Wire
 	SPI
+	Servo
 custom_nanopb_protos =
 	+<proto/**/*.proto>
 
@@ -56,6 +57,7 @@ lib_deps =
 	sparkfun/SparkFun MMC5983MA Magnetometer Arduino Library@^1.1.4
 	finani/ICM42688@^1.1.0
 	nanopb/Nanopb@^0.4.91
+	Servo
 
 [env:polaris-linux]
 extends = env:polaris
