clearing sd and reading sd directory implemented

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	greiman/SdFat
 	nanopb/Nanopb@^0.4.91
+	jandrassy/StreamLib@^1.4.0
 	Wire
 	SPI
 	Servo
