oops the polaris branch didn't compile for polaris

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,7 @@ lib_deps =
 	sparkfun/SparkFun MMC5983MA Magnetometer Arduino Library@^1.1.4
 	finani/ICM42688@^1.1.0
 	nanopb/Nanopb@^0.4.91
+	jandrassy/StreamLib@^1.4.0
 	Servo
 
 [env:polaris-linux]
