--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
 	greiman/SdFat
 	nanopb/Nanopb@^0.4.91
 	jandrassy/StreamLib@^1.4.0
+	tomstewart89/BasicLinearAlgebra @ ^5.1
 	Wire
 	SPI
 	Servo
@@ -60,6 +61,7 @@ lib_deps =
 	nanopb/Nanopb@^0.4.91
 	jandrassy/StreamLib@^1.4.0
 	Servo
+	tomstewart89/BasicLinearAlgebra @ ^5.1
 
 [env:polaris-linux]
 extends = env:polaris
