Add EKF from boilerplate + update some boilerplate stuff

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	sparkfun/SparkFun u-blox GNSS v3@^3.1.8
 	greiman/SdFat
 	nanopb/Nanopb@^0.4.91
+	tomstewart89/BasicLinearAlgebra @ ^5.1
 	Wire
 	SPI
 	Servo
@@ -33,6 +34,8 @@ board_build.variants_dir = variants
 build_flags =
 	-D MARS
 	-I variants/MARS
+	-DTIM_IRQ_PRIO=2
+	-DTIM_I2C_PRIO=3
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_CDC
     -DUSBCON
     -DUSBD_VID=0
