--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:sd_read]
+platform = native
+lib_deps =
+framework =
+build_src_filter = -<*> +<../SerialSDReader/*>
+
 [env]
 platform = ststm32
 framework = arduino
